# LAB2_YaPiMt

./: CMakeLists.txt  HashTable.cpp  Scanner.cpp  Table.cpp  main.cpp
include/: ConstantsTable.h  DelimitersTable.h  HashTable.h  IdentifierTable.h  KeyWordsTable.h  Scanner.h  Table.h
рабочая версия/: 10.txt  20.txt  30.txt  40.txt  input.txt  main.cpp
